feat: add Addevent script for event management functionality

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,6 +39,7 @@ const { title } = Astro.props;
 		<script type="text/javascript" is:inline src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 		<script type="text/javascript" is:inline src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.13.0/lottie_svg.min.js" integrity="sha512-HCpipdm4BrY9+vnxoUu+n1GDyD7eK9KpzXIJs8U9Z4gT1EzMUJdQ5bHOJt/JPvZGFcLETBnC1ryKtirSgR2wKQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script type="text/javascript" is:inline src="/scripts/parallax.min.js"></script>
+		<script type="text/javascript" is:inline src="https://addevent.com/libs/atc/1.6.1/atc.min.js" ></script>
 	</head>
 	<body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
 
