feat: update event scheduling functionality and add event calendar file

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,6 +44,9 @@ const TIP3 = "Y lo más importante: vení con ganas de bailar, reír y disfrutar
 const DRESSCODE_H1 = "Elegante"
 const DRESSCODE_H2 = "(No usar Azul/Azul noche)"
 
+const DTSTART = "20260524T210000Z";
+const DTEND = "20260525T050000Z";
+
 ---
 
 
