--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title, description, image } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="robots" content="noindex, nofollow">
+		<!-- <meta name="robots" content="noindex, nofollow"> -->
 		<meta name="color-scheme" content="light only">
 		<meta name="theme-color" content="#FFFCF8">
 		
